# simple-container-backupper

./: README.md  config.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: python-package.yml
src/conback/: core.py
tests/: README.md  basic_t.py  test_config.py  test_package_functions.py
