[metadata]
name = conback
description = Simple container backupper
author = Suha Arslan
license = BSL-1.0
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    conback
install_requires =
    docker>=6.0.0

python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.3
    pytest-cov>=3.0.0
    mypy>=0.971
    flake8>=5.0.4

[options.package_data]
conback = py.typed
